1/28/2021
================
* Updated to use new methods specified by hentai 3.2.*

1/2/2021
================
* Fixed a bug where pressing the right arrow key at the end of a doujin will continue to the next (non-existent) page, returning a 500.
* Pressing the 'f' key will now toggle zoom (like on nhentai.net)

12/30/2020
================
* Added doujin filtering by tag. Prefix the searched tag with a hash (#).
* Moved config.py to config.py.example to prevent shenanigans

12/29/2020
================
* Merry belated Christmas!
* Added doujin filtering by title or id. Use the top search bar to filter.
	* Filtering by tag soon

12/5/2020
================
* Navbar theme revamped (CSS is a bitch)

12/4/2020
================
* App now loads thumbnails via JS and JSON instead of handling it with a Jinja 2 template
	* Searching/Filtering might be easier to implement
* Shifted around js and put them in files
* Added refresh and task page buttons at the top of the home page

11/22/2020
================
* App now downloads in parallel. `max_concurrent_downloads` in `config.py` determines the maximum number of downloads that can be done in parallel.

11/21/2020
================
* Removed masterlists and `hasht.txt`, replaced with JSON info in directory
* Added a task list page on the webapp to monitor tasks that are still queueing

11/13/2020
================
* Added a url/id download page (to download while the server is launched)