@@ -14,7 +14,7 @@
 		</div>
 		-->
 		<ul id="navbar" class="navbar">
-			<li><a href="/download">Add new link/id</a></li>
+			<li><a href="/tasks">Add new link/id</a></li>
 			<li><a href="/tasks">Tasks</a></li>
 			<li><input type="text" id="doujinsearch" oninput="searchFilter()" placeholder="Search collection..."></li>
 			<li><button class="navbar-button" onclick="update_list()">Refresh</button></li>
